Issue #3005355 by jrockowitz: Optionally wrap grouped and composite elements in a fieldset

--- a/css/webform.theme.seven.css
+++ b/css/webform.theme.seven.css
@@ -151,8 +151,9 @@ pre.webform-codemirror-runmode {
 
 /* jQuery UI tooltip */
 .ui-tooltip hr {
-  background: #840;
+  background: #666;
   margin: .3em 0;
+  height: 1px;
 }
 
 .ui-tooltip code {
